--- a/android/src/main/res/values-night/styles.xml
+++ b/android/src/main/res/values-night/styles.xml
@@ -5,9 +5,9 @@
              Flutter draws its first frame -->
         <item name="android:windowBackground">@drawable/launch_background</item>
     </style>
-    <style name="AppDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="AppDialogTheme" parent="Theme.AppCompat.Dialog.Alert">
         <item name="android:windowBackground">@color/dialog_background</item>
         <item name="android:textColorPrimary">@color/dialog_text_primary</item>
         <item name="android:textColorSecondary">@color/dialog_text_secondary</item>
     </style>
-</resources>
+</resources> 
